B&L QA/objects/Customer_Feedback__c.object
<CustomObject>
    <description>Capture Customer responses to questionairs</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Did the Customer leave additional comments voice mail comments</description>
        <label>Additional Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Rating customer gave as an answer</description>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Service Rep the customer talked to</description>
        <label>CS Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <description>Date of telephone Survey</description>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <description>Avaya Call Id</description>
        <label>Call ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Name of Customer Declining Survey</description>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <description>External Id Field</description>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Response__c</fullName>
        <description>Customer&apos;s Response to questionaire request</description>
        <label>Participation Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - One Time</fullName>
                </value>
                <value>
                    <fullName>Do Not Ask Again</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Contains the text associate with the questions asked</description>
        <label>Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CF Phone Feedback</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>CRC_Customer_Feedback</fullName>
        <active>true</active>
        <description>Record Type used to capture feedback for SU phone questionaire</description>
        <label>CRC Customer Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual</fullName>
        <active>true</active>
        <description>Used when customer declines phone survey</description>
        <label>Manual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Edit_of_Integration_Records</fullName>
        <active>true</active>
        <description>Prevents CS users from editing surveys integrated from Verint</description>
        <errorConditionFormula>AND( $RecordType.Name == &quot;CRC Customer Survey&quot; , !Contains($Profile.Name ,&quot;Integration&quot;), !Contains($Profile.Name ,&quot;System Admin&quot;))</errorConditionFormula>
        <errorMessage>You may not edit a record that has come from the CF Phone Survey software.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Response_Required</fullName>
        <active>true</active>
        <description>If Record Type = Manual Decline, then Participation Response is required</description>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;Manual&apos; &amp;&amp; text(Participation_Response__c) = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Participation_Response__c</errorDisplayField>
        <errorMessage>You Must Select A Participation Response</errorMessage>
    </validationRules>
</CustomObject>